--- a/animations_transform_transitions.html
+++ b/animations_transform_transitions.html
@@ -6,10 +6,59 @@
         <title>Animations, Transform, Transition</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <style>
-            
+            body {
+                background-color: #3C3D37;
+                display: flex;
+                justify-content: center;
+            }
+
+            .container {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                flex-direction: row;
+                width: 1000px;
+                height: 500px;
+                background-color: #ECDFCC;
+                border-radius: 20px;
+            }
+
+            .parts {
+                width: 350px;
+                height: 350px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+            }
+
+            .text {
+                font-family: sans-serif;
+                font-weight: bolder;
+                font-size: 40px;
+                color: #181C14;
+                text-align: center;
+            }
+
+            .box {
+                width: 250px;
+                height: 250px;
+                background-color: #697565;
+                border-radius: 10px;
+            }
+
         </style>
     </head>
     <body>
-        
+        <div class="container">
+            <div class="parts">
+                <div class="text">Transitions</div>
+                <div class="box transition"></div>
+            </div>
+            <div class="parts">
+                <div class="text">Animations</div>
+                <div class="box animation"></div>
+            </div>
+        </div> 
     </body>
 </html>
