--- a/animations_transform_transitions.html
+++ b/animations_transform_transitions.html
@@ -47,6 +47,16 @@
                 border-radius: 10px;
             }
 
+            .transition {
+                transition-duration: 3s;
+                transition-timing-function: ease-in-out;
+                transition-delay: 0.3s;
+            }
+
+            .transition:hover {
+                border-radius: 50%;
+            }
+
         </style>
     </head>
     <body>
