--- a/animations_transform_transitions.html
+++ b/animations_transform_transitions.html
@@ -57,6 +57,38 @@
                 border-radius: 50%;
             }
 
+
+            .animation {
+                animation-name: animation;
+                animation-duration: 5s;
+                animation-timing-function: ease;
+                animation-iteration-count: infinite;
+            }
+
+            @keyframes animation {
+                0% {
+                    transform: scale(1);
+                    transform: rotate(0deg);
+                    transform: translateY(0px);
+                    transform: skewX(0deg);
+                }
+                30% {
+                    transform: scale(0.8);
+                    transform: rotate(90deg);
+                    transform: translateY(50px);
+                    transform: skewX(10deg);
+                }
+                60% {
+                    transform: scale(0.9);
+                }
+                100% {
+                    transform: scale(1);
+                    transform: rotate(0deg);
+                    transform: translateY(0px);
+                    transform: skewX(0deg);
+                }
+            }
+
         </style>
     </head>
     <body>
