--- a/animations_transform_transitions.html
+++ b/animations_transform_transitions.html
@@ -129,7 +129,17 @@
                 100% {transform: translateY(0px);}
             }
 
-            
+            .cat {
+                transition-duration: 1.5s;
+                transition-delay: 1s;
+                transition-timing-function: ease;
+            }
+
+            .cat:hover {
+                background-color: #76ABAE;
+                transform: rotate(180deg);
+            }
+
 
         </style>
     </head>
