--- a/animations_transform_transitions.html
+++ b/animations_transform_transitions.html
@@ -9,7 +9,6 @@
             body {
                 background-color: #3C3D37;
                 display: flex;
-                justify-content: center;
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-evenly;
@@ -71,25 +70,16 @@
 
             @keyframes animation {
                 0% {
-                    transform: scale(1);
-                    transform: rotate(0deg);
-                    transform: translateY(0px);
-                    transform: skewX(0deg);
+                    transform: scale(1) rotate(0deg) translateY(0px) skewX(0deg);
                 }
                 30% {
-                    transform: scale(0.8);
-                    transform: rotate(90deg);
-                    transform: translateY(50px);
-                    transform: skewX(10deg);
+                    transform: scale(0.8) rotate(90deg) translateY(50px) skewX(10deg);
                 }
                 60% {
                     transform: scale(0.9);
                 }
                 100% {
-                    transform: scale(1);
-                    transform: rotate(0deg);
-                    transform: translateY(0px);
-                    transform: skewX(0deg);
+                    transform: scale(1) rotate(0deg) translateY(0px) skewX(0deg);
                 }
             }
 
@@ -125,7 +115,7 @@
 
             @keyframes bounce {
                 0% {transform: translateY(0px);}
-                50% {transform: translateY(-100px);}
+                30% {transform: translateY(-100px);}
                 100% {transform: translateY(0px);}
             }
 
@@ -146,7 +136,7 @@
                 margin-top: -80px;
                 border-radius: 10px;
                 position: relative;
-                animation-name: bon;
+                animation-name: bon, bon2;
                 animation-duration: 6s;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
@@ -158,6 +148,24 @@
                 }
                 100% {
                     transform: rotate(360deg) translateX(120px);
+                }
+            }
+
+            @keyframes bon2 {
+                0% {
+                    background-color: #697565;
+                }
+                25% {
+                    background-color: #3C3D37;
+                }
+                50% {
+                    background-color: #181C14;
+                }
+                75% {
+                    background-color: #ECDFCC;
+                }
+                100% {
+                    background-color: #697565;
                 }
             }
 
