Update animation transform

--- a/animations_transform_transitions.html
+++ b/animations_transform_transitions.html
@@ -76,7 +76,7 @@
                     transform: scale(0.8) rotate(90deg) translateY(50px) skewX(10deg);
                 }
                 60% {
-                    transform: scale(0.9);
+                    transform: scale(0.9) rotate(90deg) translateY(50px) skewX(10deg);
                 }
                 100% {
                     transform: scale(1) rotate(0deg) translateY(0px) skewX(0deg);
@@ -129,6 +129,7 @@
                 background-color: #76ABAE;
                 transform: rotate(180deg);
             }
+
 
             .bonus {
                 width: 150px;
